# georoost-demo

./: .gitignore  README.md  app.py  pyproject.toml
components/: boundary_loader.py  circle_loader.py  markdown_loader.py  population_aggregator.py  population_pyramid.py  schema_selector.py  table_loader.py
pages/: chart1.py  chart2.py  chart3.py  chart5.py  chart7.py  chart8.py  document1.py  home.py  page_list.yaml
