[project]
name = "georoost-motherduck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "duckdb>=1.3.0",
    "geopandas>=1.1.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "streamlit>=1.45.1",
    "streamlit-folium>=0.25.0",
]
